move configs to env files

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,2 +1,11 @@
 DATABASE_PATH=database/valuations-dev.sqlite
 SYNC_DATABASE=true
+
+# Failover Service Configuration
+FAILURE_THRESHOLD=0.5
+REVERT_TIMEOUT_MS=180000
+MIN_REQUESTS_FOR_THRESHOLD=10
+
+# Provider API URLs
+SUPER_CAR_API_URL=https://run.mocky.io/v3/9245229e-5c57-44e1-964b-36c7fb29168b
+PREMIUM_CAR_API_URL=https://run.mocky.io/v3/67abe639-2efa-4283-ad0e-61b696c6949b
