--- a/env/.env.prod
+++ b/env/.env.prod
@@ -1,2 +1,11 @@
 DATABASE_PATH=database/valuations-prod.sqlite
 SYNC_DATABASE=false
+
+# Failover Service Configuration
+FAILURE_THRESHOLD=0.5
+REVERT_TIMEOUT_MS=180000
+MIN_REQUESTS_FOR_THRESHOLD=10
+
+# Provider API URLs
+SUPER_CAR_API_URL=http://localhost:3001
+PREMIUM_CAR_API_URL=http://localhost:3002
