--- a/env/.env.test
+++ b/env/.env.test
@@ -1,3 +1,12 @@
 #Don't need a database file for testing
 DATABASE_PATH=
 SYNC_DATABASE=false
+
+# Failover Service Configuration
+FAILURE_THRESHOLD=0.5
+REVERT_TIMEOUT_MS=180000
+MIN_REQUESTS_FOR_THRESHOLD=10
+
+# Provider API URLs
+SUPER_CAR_API_URL=http://localhost:3001
+PREMIUM_CAR_API_URL=http://localhost:3002
